--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     welcome {{request.user}}
-    <p>this is the best website of this planet </p>
+    <p>this is the best website of this planet!</p>
     <a href="/logout">logout</a>
 </body>
 </html>
