--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>logged in user</title>
+    <title>Hello guys!!!</title>
 </head>
+
 <body>
-    welcome {{request.user}}
-    <p>this is the best website of this planet!</p>
-    <a href="/logout">logout</a>
+    <h1>Welcome {{request.user}}</h1>
+    <button type="submit"><a href="/logout/">Logout</a></button>
 </body>
+
 </html>
